--- a/cabinet/templates/include/sidebar.html
+++ b/cabinet/templates/include/sidebar.html
@@ -3,7 +3,7 @@
     <div class="nav flex-column nav-pills">
         {% with request.resolver_match.url_name as url_name %}
             <a class="nav-link {% if url_name == 'my_company' %}active{% elif url_name == 'create_company' %}active{% endif %}" href="{% url 'my_company' %}">1. Информация о&nbsp;компании</a>
-            <a class="nav-link {% if url_name == 'create_vacancy' %}active{% endif %}" href="{% url 'create_vacancy' %}">2. Вакансии</a>
+            <a class="nav-link {% if url_name == 'vacancies' %}active{% elif url_name == 'create_vacancy' %}active{% endif %}" href="{% url 'vacancies' %}">2. Вакансии</a>
         {% endwith %}
     </div>
 </aside>
