--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
                 {% for specialty in first_four_speciality %}
                     <div class="col-6 col-md-6 col-lg-3">
                         <div class="card pt-4 text-center mb-4">
-{#                            <img class="mx-auto d-block" src="{{ specialty.image.url }}" width="80" height="80" alt="">#}
+                            <img class="mx-auto d-block" src="{{ specialty.image.url }}" width="80" height="80" alt="">
                             <div class="card-body">
                                 <p class="card-text mb-2">{{ specialty.title }}</p>
                                 <p class="card-text"><a href="{{ specialty.get_absolute_url }}">{{ specialty.vacancies.count }} вакансий</a></p>
