--- a/vacancy/templates/vacancy/company.html
+++ b/vacancy/templates/vacancy/company.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
 {% block main %}
-  <main class="container mt-3">
+  <main class="container mt-3"  >
     <div class="navbar mt-5">
       <p><a href="#">Назад</a></p>
     </div>
     <section>
       <div class="text-center">
-        <img src="https://place-hold.it/130x80" width="130" height="80" alt="">
+        <img src="{{ company.company.logo.url }}" width="130" height="80" alt="">
       </div>
       <h1 class="h1 text-center mx-auto mt-0 pt-1" style="font-size: 70px;"><strong>{{ company.company|capfirst }}</strong></h1>
       <p class="text-center pt-1">Компания, {{ company.company.city }}, {{ company.vacancies.count }} вакансий</p>
