--- a/cabinet/templates/cabinet/create_vacancy.html
+++ b/cabinet/templates/cabinet/create_vacancy.html
@@ -69,10 +69,24 @@
                                     <button class="btn btn-info" type="submit">Save</button>
                                 </div>
                             </form>
+                            <!-- Applications -->
+              <h2 class="h4 pt-2 pb-3">Отклики - {{ applications.count }}</h2>
+                            {% for application in applications %}
+              <!-- Application 1 -->
+              <div class="card mt-3">
+                <div class="card-body px-4">
+                  <p class="mb-1 font-weight-bold">{{ application.written_username }}</p>
+                  <p class="mb-2"><a href="tel:+79002842324" class="text-dark">{{ application.written_phone }}</a></p>
+                  <p class="mb-1">{{ application.written_cover_letter }}</p>
+                </div>
+              </div>
+                            {% endfor %}
+              <!-- END Application 1 -->
                         </section>
                         <!-- END Tab -->
                     </div>
                 </div>
+
             </div>
         </div>
     </main>
