--- a/templates/include/_navbar.html
+++ b/templates/include/_navbar.html
@@ -7,7 +7,7 @@
         <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
             <ul class="navbar-nav col-10">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Вакансии</a>
+                    <a class="nav-link" href="#">Vacancies</a>
                 </li>
             </ul>
             {% if user.is_authenticated %}
@@ -18,9 +18,9 @@
                         {{ user.username }}
                     </button>
                     <div class="dropdown-menu dropdown-menu-right mt-3">
-                        <a href="#" class="dropdown-item py-2">Профиль</a>
-                        <a href="#" class="dropdown-item py-2">Резюме</a>
-                        <a href="{% url 'my_company' %}" class="dropdown-item py-2">Компания</a>
+                        <a href="#" class="dropdown-item py-2">Profile</a>
+                        <a href="#" class="dropdown-item py-2">Summary</a>
+                        <a href="{% url 'my_company' %}" class="dropdown-item py-2">My company</a>
                         <a href="{% url 'logout' %}" class="dropdown-item py-2">Logout</a>
                     </div>
                 </div>
