--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
     <main class="container mt-3">
         <section>
-            <h1 class="h1 text-center mx-auto mt-4 py-5"><strong>Вакансии для <br>Junior-разработчиков</strong></h1>
+            <h1 class="h1 text-center mx-auto mt-4 py-5"><strong>Vacancies for<br>Junior developers</strong></h1>
             <div class="row">
                 <div class="col-12 col-md-8 col-lg-6 offset-lg-3 offset-md-2">
                     <form class="form-inline mb-3" method="get">
@@ -12,15 +12,15 @@
                             {{ form.q }}
                         </div>
                         <div class="form-group col-4 col-md-2 pl-0">
-                            <button class="btn btn-primary w-100" type="submit">Найти</button>
+                            <button class="btn btn-primary w-100" type="submit">Find</button>
                         </div>
                     </form>
-                    <p>Например:
-                        <a href="/?q=python" class="text-dark border-bottom border-dark m-1 text-decoration-none">Python</a>
-                        <a href="/?q=flask" class="text-dark border-bottom border-dark m-1 text-decoration-none">Flask</a>
-                        <a href="/?q=django" class="text-dark border-bottom border-dark m-1 text-decoration-none">Django</a>
-                        <a href="/?q=парсинг" class="text-dark border-bottom border-dark m-1 text-decoration-none">Парсинг</a>
-                        <a href="/?q=ml" class="text-dark border-bottom border-dark m-1 text-decoration-none">ML</a>
+                    <p>Example:
+                        <a href="/search/?q=python" class="text-dark border-bottom border-dark m-1 text-decoration-none">Python</a>
+                        <a href="/search/?q=flask" class="text-dark border-bottom border-dark m-1 text-decoration-none">Flask</a>
+                        <a href="/search/?q=django" class="text-dark border-bottom border-dark m-1 text-decoration-none">Django</a>
+                        <a href="/search/?q=парсинг" class="text-dark border-bottom border-dark m-1 text-decoration-none">Парсинг</a>
+                        <a href="/search/?q=ml" class="text-dark border-bottom border-dark m-1 text-decoration-none">ML</a>
 
                     </p>
                 </div>
@@ -28,7 +28,7 @@
         </section>
 
         <section class="mt-5 pt-3">
-            <h2 class="h2 font-weight-normal text-center mb-5">Вакансии по рубрикам</h2>
+            <h2 class="h2 font-weight-normal text-center mb-5">Vacancies by headings</h2>
             <div class="row mb-0">
                 {% for specialty in first_four_speciality %}
                     <div class="col-6 col-md-6 col-lg-3">
@@ -60,7 +60,7 @@
         </section>
 
         <section class="my-5 pt-3">
-            <h2 class="h2 font-weight-normal text-center mb-5">Нам доверяют лучшие компании</h2>
+            <h2 class="h2 font-weight-normal text-center mb-5">Trusted by the best companies</h2>
             <div class="row mb-0">
                 {% for company in first_four_company %}
                     <div class="col-6 col-md-6 col-lg-3">
