--- a/vacancy/templates/vacancy/search.html
+++ b/vacancy/templates/vacancy/search.html
@@ -5,46 +5,46 @@
 
     <main class="container mt-3">
         <section>
-            <h1 class="h1 text-center mt-5 mb-4">Поиск вакансий</h1>
+            <h1 class="h1 text-center mt-5 mb-4">Job search</h1>
             <div class="row">
                 <div class="col-md-7 col-lg-5 col-xl-6 col-sm-8 mx-auto">
 
                     <form method="get" class="form-inline sm-form mr-auto mb-4">
-
                         {{ form.q }}
-
-                            {#                        <input class="form-control mr-sm-2 mx-auto" type="text" placeholder="Например: ios" value="Backend" aria-label="Search">#}
-                        <button class="btn btn-primary  my-0 mr-auto" type="submit">Найти вакансии</button>
+                        <button class="btn btn-primary  my-0 mr-auto" type="submit">Find vacancies</button>
                     </form>
 
                 </div>
             </div>
 
-
-            <p class="text-center pt-1">Найдено {{ vacancy.count }} вакансий</p>
             {% if vacancy %}
-            <div class="row mt-5">
+                <p class="text-center pt-1">Found {{ vacancy.count }} vacancies</p>
+                <div class="row mt-5">
                 <div class="col-12 col-lg-8 offset-lg-2 m-auto">
-                    <div class="card mb-4">
-                        <div class="card-body px-4">
-                            <div class="row">
-                                <div class="col-12 col-md-8 col-lg-9">
-                                    {% for vacancy in vacancy %}
-                                    <h2 class="h2 pb-2">{{ vacancy.title }}</h2>
-                                    <p class="mb-2">{{ vacancy.skills}}</p>
-                                    <p>От {{ vacancy.salary_min }} до {{ vacancy.salary_max }} руб.</p>
-                                    <p class="text-muted pt-1">{{ vacancy.created_at }}</p>
+                    {% for vacancy in vacancy %}
+                        <div class="card mb-4">
+                            <div class="card-body px-4">
+                                <div class="row">
+                                    <div class="col-12 col-md-8 col-lg-9">
+                                        <a href="{{ vacancy.get_absolute_url }}"><h2 class="h2 pb-2">{{ vacancy.title }}</h2></a>
+                                        <p class="mb-2">{{ vacancy.skills}}</p>
+                                        <p>От {{ vacancy.salary_min }} до {{ vacancy.salary_max }} руб.</p>
+                                        <p class="text-muted pt-1">{{ vacancy.created_at }}</p>
+                                    </div>
+                                    <div class="col-12 col-md-4 col-lg-3 d-flex align-items-end">
+                                        <a href="#"><img src="{{ vacancy.photo}}" width="130" height="80" alt=""></a>
+                                    </div>
                                 </div>
-                                <div class="col-12 col-md-4 col-lg-3 d-flex align-items-end">
-                                    <a href="#"><img src="https://place-hold.it/130x80" width="130" height="80" alt=""></a>
-                                </div>
-                                {% endfor %}
+
                             </div>
+
                         </div>
-                    </div>
+                    {% endfor %}
                 </div>
+                {% else %}
+                <h2 class="text-center">Nothing found</h2>
+            {% endif %}
             </div>
-                    {% endif %}
         </section>
     </main>
 {% endblock %}
