--- a/vacancy/templates/vacancy/search.html
+++ b/vacancy/templates/vacancy/search.html
@@ -22,26 +22,28 @@
                 <div class="row mt-5">
                 <div class="col-12 col-lg-8 offset-lg-2 m-auto">
                     {% for vacancy in vacancy %}
-                        <div class="card mb-4">
-                            <div class="card-body px-4">
-                                <div class="row">
-                                    <div class="col-12 col-md-8 col-lg-9">
-                                        <a href="{{ vacancy.get_absolute_url }}"><h2 class="h2 pb-2">{{ vacancy.title }}</h2></a>
-                                        <p class="mb-2">{{ vacancy.skills}}</p>
+                    <div class="card mb-4">
+                        <div class="card-body px-4">
+                            <div class="row">
+                                <div class="col-12 col-md-8 col-lg-9">
+                                    <a href="{{ vacancy.get_absolute_url }}"><h2 class="h2 pb-2">{{ vacancy.title }}</h2></a>
+                                    {% for skill in vacancy.skills.all %}
+                                        <p class="mb-2">{{ skill }}</p>
+                                    {% endfor %}
                                         <p>От {{ vacancy.salary_min }} до {{ vacancy.salary_max }} руб.</p>
                                         <p class="text-muted pt-1">{{ vacancy.created_at }}</p>
-                                    </div>
-                                    <div class="col-12 col-md-4 col-lg-3 d-flex align-items-end">
-                                        <a href="#"><img src="{{ vacancy.photo}}" width="130" height="80" alt=""></a>
-                                    </div>
-                                </div>
+                                        </div>
+                                        <div class="col-12 col-md-4 col-lg-3 d-flex align-items-end">
+                                            <a href="#"><img src="{{ vacancy.photo}}" width="130" height="80" alt=""></a>
+                                        </div>
+                                        </div>
 
-                            </div>
+                                        </div>
 
-                        </div>
-                    {% endfor %}
+                                        </div>
+                                    {% endfor %}
                 </div>
-                {% else %}
+            {% else %}
                 <h2 class="text-center">Nothing found</h2>
             {% endif %}
             </div>
