--- a/cabinet/templates/cabinet/login.html
+++ b/cabinet/templates/cabinet/login.html
@@ -3,25 +3,26 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block main %}
-<body>
-<main class="container">
-    <div class="row">
-        <div class="col-8 col-lg-4 offset-2 offset-lg-4">
-            <form method="post" class="form-signin pt-5" enctype="multipart/form-data">
-                {% csrf_token %}
-                <div class="text-center mt-1 b-1">
-                    <h1 class="h3 mb-3 font-weight-normal">Джуманджи</h1>
-                    <p class="h5 font-weight-light mb-4">Войдите, чтобы управлять</p>
-                </div>
-                {{ form.as_p }}
-                <button class="btn btn-primary btn-lg btn-block" type="submit">Sign in</button>
-            </form>
-            <div class="mt-3 d-flex justify-content-between">
-                <p><a href="{% url 'register' %}">Forgot Password?</a></p>
-                <p><a href="{% url 'register' %}">Sign Up</a></p>
+    <body>
+    <main class="container">
+        <div class="row">
+            <div class="col-8 col-lg-4 offset-2 offset-lg-4">
+                <form method="post" class="form-signin pt-5" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <div class="text-center mt-1 b-1">
+                        <h1 class="h3 mb-3 font-weight-normal">Джуманджи</h1>
+                        <p class="h5 font-weight-light mb-4">Login to manage</p>
+                    </div>
+                    {{ form.as_p }}
+                    <button class="btn btn-primary btn-lg btn-block form" type="submit">Sign in</button>
+
+                    <div class="form-button mt-4 d-flex justify-content-between">
+                        <p><a href="{% url 'register' %}">Forgot Password?</a></p>
+                        <p><a href="{% url 'register' %}">Sign Up</a></p>
+                    </div>
+                </form>
             </div>
         </div>
-    </div>
-</main>
-</body>
+    </main>
+    </body>
 {% endblock %}
