--- a/resume/templates/resume/all_resume.html
+++ b/resume/templates/resume/all_resume.html
@@ -4,23 +4,19 @@
     <body>
     <main class="container mt-3">
         <section>
-            <h1 class="h1 text-center mx-auto mt-4 pt-5" style="font-size: 70px;"><strong>{% block title %}All vacancies{% endblock %}</strong></h1>
-            <p class="text-center pt-1">{{ count }} vacancies</p>
+            <h1 class="h1 text-center mx-auto mt-4 pt-5" style="font-size: 70px;"><strong>{% block title %}All resume{% endblock %}</strong></h1>
+            <p class="text-center pt-1">{{ resume.count }} resume</p>
             <div class="row mt-5">
                 <div class="col-12 col-lg-8 offset-lg-2 m-auto">
-                    {% for vacancy in vacancies %}
+                    {% for res in resume %}
                         <div class="card mb-4">
                             <div class="card-body px-4">
                                 <div class="row">
                                     <div class="col-12 col-md-8 col-lg-9">
                                         <h2 class="h2 pb-2">
-                                            <a href="{{ vacancy.get_absolute_url }}">
-                                                {{ vacancy.title }}</a></h2>
-                                        {% for skill in vacancy.skills.all %}
-                                            <p class="mb-2">{{ skill }}</p>
-                                        {% endfor %}
-                                        <p>Salary: {{ vacancy.salary_min }} - {{ vacancy.salary_max }} $</p>
-                                        <p class="text-muted pt-1">{{ vacancy.created_at }}</p>
+                                            <a href="{{ res.get_absolute_url }}">{{ res.title }}</a></h2>
+                                        <p class="text-muted mb-4">{{ res.first_name }} {{ res.second_name }}</p>
+                                        <p>Salary {{ res.salary }} $</p>
                                     </div>
                                     <div class="col-12 col-md-4 col-lg-3 d-flex align-items-end">
                                         <a href="#"><img src="https://place-hold.it/130x80" width="130" height="80" alt=""></a>
