--- a/cabinet/templates/cabinet/create_vacancy.html
+++ b/cabinet/templates/cabinet/create_vacancy.html
@@ -75,8 +75,8 @@
               <!-- Application 1 -->
               <div class="card mt-3">
                 <div class="card-body px-4">
-                  <p class="mb-1 font-weight-bold">{{ application.written_username }}</p>
-                  <p class="mb-2"><a href="tel:+79002842324" class="text-dark">{{ application.written_phone }}</a></p>
+                  <p class="mb-1 font-weight-bold"><a href="{% url 'list_resume' application.resume.pk %}">{{ application.resume.title }}</a></p>
+                  <p class="mb-2"><a href="tel:+79002842324" class="text-dark">{{ application.resume.first_name }} {{ application.resume.second_name }}</a></p>
                   <p class="mb-1">{{ application.written_cover_letter }}</p>
                 </div>
               </div>
