--- a/cabinet/templates/cabinet/company-create.html
+++ b/cabinet/templates/cabinet/company-create.html
@@ -8,7 +8,7 @@
     <main class="container mt-3 pb-5">
         <section class="col-12 col-lg-6 offset-lg-3 mt-5 card">
             <div class="card-body px-4 pb-4">
-                {% if request.user.is_staff %}
+                {% if request.user.is_employer %}
                     {% with request.resolver_match.url_name as url_name %}
                         {% if url_name == 'my_profile' %}
                             <h1 class="h4 pt-2">My company</h1>
